@@ -4,7 +4,7 @@
 
   <!ENTITY dhfirstname "<firstname>Petr</firstname>">
   <!ENTITY dhsurname   "<surname>Kubanek</surname>">
-  <!ENTITY dhdate      "<date>2010-03-20</date>">
+  <!ENTITY dhdate      "<date>2010-10-26</date>">
   <!ENTITY dhsection   "<manvolnum>5</manvolnum>">
   <!ENTITY dhemail     "<email>petr@kubanek.net</email>">
   <!ENTITY dhusername  "Petr Kubanek">
@@ -592,6 +592,13 @@ read image imagename  # $image will hold "image" string
 echo rename $imagename /foo/bar/%f  # renames acquired image to /foo/bar/{standard image pattern}	
 read new_name # reads new image name to $new_name
 	</literallayout></listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><option>move {image name} {expression}</option></term>
+	<listitem><para>
+	  Move image to given path, delete it from the database. Please see
+	  rename command for an example. Returns new image name.
+	</para></listitem>
       </varlistentry>
       <varlistentry>
         <term><option>copy {image name} {expression}</option></term>
